--- a/src/components/component.module.scss
+++ b/src/components/component.module.scss
@@ -9,6 +9,12 @@
     padding: 5px 10px;
     margin: 10px 0px;
     border-radius: 3px;
+    cursor: pointer;
+    transition: all ease 0.3s;
+
+    &:hover {
+        box-shadow: none;
+    }
 }
 
 body {
