--- a/src/components/component.module.scss
+++ b/src/components/component.module.scss
@@ -11,6 +11,8 @@
     border-radius: 3px;
     cursor: pointer;
     transition: all ease 0.3s;
+    width: 100%;
+    color: #004D40;
 
     &:hover {
         box-shadow: none;
