--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -2,10 +2,23 @@
     width: 1200px;
 }
 
+input {
+    width: 100%;
+    padding: 10px 10px;
+    border-radius: 3px;
+    box-sizing: border-box;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    margin-top: 25px;
+}
+
 ul {
     display: flex;
     width: 1200px;   
     justify-content: center;
+    margin-top: 25px;
 
     li {
         list-style: none;
@@ -14,6 +27,7 @@ ul {
         border-radius: 90px;
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         margin: 0 10px;
+        cursor: pointer;
     }
 }
 
