wdit style toastify

--- a/src/components/component.module.scss
+++ b/src/components/component.module.scss
@@ -15,7 +15,7 @@
     color: #004D40;
 
     &:hover {
-        box-shadow: none;
+        box-shadow: rgba(#004D40, 0.2) 0px 1px 4px 0px;
     }
 }
 
