edit style hover items

--- a/src/components/component.module.scss
+++ b/src/components/component.module.scss
@@ -15,7 +15,7 @@
     color: #004D40;
 
     &:hover {
-        box-shadow: rgba(#004D40, 0.2) 0px 1px 4px 0px;
+        box-shadow: rgb(0 77 64 / 40%) 0px 0px 3px 2px;
     }
 }
 
