--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,54 +1,130 @@
+body {
+    overflowY: hidden;
+
+}
+
 .container {
-    width: 1200px;
-}
-
-input {
-    width: 100%;
-    padding: 10px 10px;
-    border-radius: 3px;
-    box-sizing: border-box;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    border: none;
-    outline: none;
-    font-size: 18px;
-    margin-top: 25px;
-}
-
-ul {
-    display: flex;
-    width: 1200px;
-    justify-content: center;
-    box-sizing: border-box;
-    padding-left: 0;
+    width: 1200px !important;
+    margin: 0 auto;
+    // input {
+    //     width: 100%;
+    //     padding: 10px 10px;
+    //     border-radius: 3px;
+    //     box-sizing: border-box;
+    //     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    //         rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    //     border: none;
+    //     outline: none;
+    //     font-size: 18px;
+    //     margin-top: 25px;
+    // }
     
-    li {
-        list-style: none;
+    ul {
+        display: flex;
+        width: 1200px;
+        justify-content: center;
+        box-sizing: border-box;
+        padding-left: 0;
+        
+        li {
+            list-style: none;
+            font-family: "iransans";
+            padding: 5px 10px;
+            border-radius: 5px;
+            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            margin: 0 10px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+    }
+    
+    .active {
+        background-color: #004d40;
+        color: #e0f2f1;
+    }
+    
+    .error {
+        width: 100%;
+        background-color: #ffebee;
+        color: #f44336;
+        margin-top: 15px;
+        font-size: 32px;
+        text-align: center;
+        font-weight: bold;
         font-family: "iransans";
-        padding: 5px 10px;
+        padding: 10px;
+        box-sizing: border-box;
         border-radius: 5px;
-        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-        margin: 0 10px;
-        margin-top: 10px;
-        cursor: pointer;
     }
 }
 
-.active {
-    background-color: #004d40;
-    color: #e0f2f1;
+header {
+    width: 100vw !important;
+    background-color: #7860cc;
+    padding: 10px 0;
+    box-sizing: border-box;
+
+    input {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 10px;
+        border-radius: 5px;
+        border: none;
+        outline: none;
+    }
 }
 
-.error {
-    width: 100%;
-    background-color: #ffebee;
-    color: #f44336;
-    margin-top: 15px;
-    font-size: 32px;
-    text-align: center;
-    font-weight: bold;
-    font-family: "iransans";
-    padding: 10px;
-    box-sizing: border-box;
-    border-radius: 5px;
+@media only screen and (max-width: 1250px) {
+    .container,
+    ul {
+        width: 1000px !important;
+    }
 }
+@media only screen and (max-width: 1050px) {
+    .container,
+    ul {
+        width: 800px !important;
+    }
+
+    li {
+        padding: 2px 5px;
+        margin: 0 5px;
+        font-size: 11px;
+    }
+}
+
+
+@media only screen and (max-width: 850px) {
+    .container,
+    ul {
+        width: 600px !important;
+    }
+    
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    h1 {
+        font-size: 21px;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .container,
+    ul {
+        width: 400px !important;
+    }
+    h1 {
+        font-size: 17px;
+    }
+    
+}
+@media only screen and (max-width: 450px) {
+    .container,
+    ul {
+        width: 300px !important;
+    }
+    
+}
+
