--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,6 +1,5 @@
 body {
-    overflowY: hidden;
-
+    overflowy: hidden;
 }
 
 .container {
@@ -18,14 +17,14 @@ body {
     //     font-size: 18px;
     //     margin-top: 25px;
     // }
-    
+
     ul {
         display: flex;
         width: 1200px;
         justify-content: center;
         box-sizing: border-box;
         padding-left: 0;
-        
+
         li {
             list-style: none;
             font-family: "iransans";
@@ -37,12 +36,12 @@ body {
             cursor: pointer;
         }
     }
-    
+
     .active {
-        background-color: #004d40;
+        background-color: #7860cc;
         color: #e0f2f1;
     }
-    
+
     .error {
         width: 100%;
         background-color: #ffebee;
@@ -63,7 +62,12 @@ header {
     background-color: #7860cc;
     padding: 10px 0;
     box-sizing: border-box;
-
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     input {
         box-sizing: border-box;
         width: 100%;
@@ -72,6 +76,10 @@ header {
         border: none;
         outline: none;
     }
+}
+
+.box_content {
+    margin-top: 70px;
 }
 
 @media only screen and (max-width: 1250px) {
@@ -93,13 +101,12 @@ header {
     }
 }
 
-
 @media only screen and (max-width: 850px) {
     .container,
     ul {
         width: 600px !important;
     }
-    
+
     ul {
         display: flex;
         flex-wrap: wrap;
@@ -118,13 +125,10 @@ header {
     h1 {
         font-size: 17px;
     }
-    
 }
 @media only screen and (max-width: 450px) {
     .container,
     ul {
         width: 300px !important;
     }
-    
 }
-
